# voxel

./: CMakeLists.txt
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
scripts/: createVideo.sh  example.sh
voxel/: CMakeLists.txt
voxel-mpi/: CMakeLists.txt
voxel-mpi/include/: file.h  my_time.h  out_algorithm3d.h  util.h  voxel.h  wavefront.h
voxel-mpi/src/: algorithm2d.cpp  image.cpp  main.cpp  my_time.cpp  test.cpp  voxel.cpp  wavefront.cpp
voxel-openmp/: CMakeLists.txt
voxel-openmp/include/: voxel.h  wavefront.h
voxel-openmp/src/: algorithm3d.cpp  main.cpp  test.cpp  util.cpp  voxel.cpp  wavefront.cpp
voxel/include/: algorithm2d.h  algorithm3d.h  file.h  image.h  out_algorithm3d.h  test.h  voxel.h
voxel/src/: algorithm3d.cpp  file.cpp  main.cpp  out_algorithm3d.cpp  voxel.cpp  wavefront.cpp
